--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,15 +3,14 @@
   <nav class="container">
     <a class="site-title" href="{{ absolute_url }}/">{{ site.title }}</a>
 
-    <a href="{{ '/projects/' | relative_url }}" {% if current[1] == 'projects' %}aria-current="page" {% endif %}>Projects</a>
-    <a href="{{ '/publications/' | relative_url }}" {% if current[1] == 'publications' %}aria-current="page"{% endif %}>Publications</a>
+    <a href="{{ '/publications/' | relative_url }}" {% if current[1] == 'publications' %}class="active"{% endif %}>Research</a>
+    <a href="{{ '/teaching/' | relative_url }}" {% if current[1] == 'teaching' %}class="active"{% endif %}>Teaching</a>
     <a href="{{ '/talks/' | relative_url }}" {% if current[1] == 'talks' %}aria-current="page"{% endif %}>Talks</a>
-    <a href="{{ '/blog/' | relative_url }}" {% if current[1] == 'blog' %}aria-current="page"{% endif %}>Blog</a>
     <a href="{{ '/cv/' | relative_url }}" {% if current[1] == 'cv' %}aria-current="page"{% endif %}>CV</a>
 
     <span class="external">
-      <a href="https://bsky.app/profile/domoritz.de"><i class="fa-brands fa-bluesky" aria-hidden="true"></i> Bsky</a>
-      <a href="mailto:domoritz@cmu.edu"><i class="fa-solid fa-envelope" aria-hidden="true"></i> Email</a>
+      <a href="https://github.com/johnsamuelsterling"><i class="fab fa-github" aria-hidden="true"></i> GitHub</a>
+      <a href="mailto:jss0122@auburn.edu"><i class="fa-solid fa-envelope" aria-hidden="true"></i> Email</a>
     </span>
   </nav>
 </header>
