--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,13 +4,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="application-name" content="{{ site.title }}">
   <meta name="theme-color" content="#b00">
-  <link rel="shortcut icon" href="{{ '/favicon.ico' | relative_url }}"/>
-  <link rel="icon" type="image/png" href="{{ '/favicon.png' | relative_url }}" sizes="250x250" />
+  <link rel="shortcut icon" href="{{ '/AuburnLogo.ico' | relative_url }}"/>
+  <link rel="icon" type="image/png" href="{{ '/AuburnLogo.png' | relative_url }}" sizes="250x250" />
 
   {% seo %}
 
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | absolute_url }}">
 
-  <link href="https://use.fontawesome.com/releases/v6.7.2/css/all.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500" rel="stylesheet">
+  <link href="https://use.fontawesome.com/releases/v6.6.0/css/all.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <link href="{{ '/styles.css' | relative_url }}" rel="stylesheet">
 </head>
