--- a/_sass/_talks.scss
+++ b/_sass/_talks.scss
@@ -1,9 +1,7 @@
-@use "_vars" as *;
-
 .talks {
   h3 {
     font-size: 1.1em;
-    font-weight: 500;
+    font-weight: $bold-font-weight;
     margin-bottom: 0.5em;
     margin-top: 2em;
 
@@ -25,17 +23,12 @@
       font-weight: 300;
       font-size: 0.8em;
 
-      // avoid the extra whitespace after the link text
-      display: inline-block;
-
       a {
         &:first-child {
           margin-left: 2em;
         }
 
-        & {
-          margin-left: 1em;
-        }
+        margin-left: 1em;
       }
     }
   }
