--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -1,6 +1,3 @@
-@use "_vars" as *;
-@use "sass:color";
-
 .home {
   h1 {
     margin-top: 0;
@@ -39,19 +36,6 @@
     }
   }
 
-  .button {
-    color: $brand-color;
-    padding: 6px 16px;
-    border-radius: 3px;
-    border: 1px solid color.adjust($brand-color, $lightness: 20%);
-
-    &:hover {
-      opacity: 1;
-      text-decoration: none;
-      background-color: color.adjust($brand-color, $lightness: 50%);
-    }
-  }
-
   .featured-projects {
     font-size: 0.9em;
     display: flex;
@@ -59,21 +43,22 @@
     margin-bottom: 1.5em;
 
     .project {
-      flex-grow: 1;
+      flex-grow: 0.25;
       flex-basis: 0;
 
       display: flex;
       flex-direction: column;
+      position: relative;
+
+      &:not(:last-child) {
+        margin-right: 16px;
+      }
 
       border-radius: 3px;
       padding: 16px;
       border: 1px solid #ddd;
 
       transition: box-shadow 0.2s ease;
-
-      &:not(:last-child) {
-        margin-right: 16px;
-      }
 
       &:hover {
         box-shadow: #aaa 2px 2px 11px;
@@ -86,7 +71,7 @@
       .title {
         margin: 0 0 0.6em 0;
         font-size: 1.3em;
-        font-weight: bold;
+        font-weight: $bold-font-weight;
         line-height: 1;
       }
 
@@ -116,7 +101,9 @@
 
         a {
           margin-right: 0.5em;
-          display: inline-block;
+          white-space: nowrap;
+          position: relative;
+          z-index: 2;
         }
       }
     }
@@ -136,7 +123,7 @@
       }
 
       .fa-trophy {
-        color: $yellow-color;
+        color: #ffc000;
       }
 
       .fa-award {
@@ -200,11 +187,6 @@
         order: 1;
         margin-left: 0;
       }
-    }
-
-    .button {
-      font-size: 1.1em;
-      background-color: color.adjust($brand-color, $lightness: 57%);
     }
 
     .featured-projects {
