--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -1,5 +1,3 @@
-@use "_vars" as *;
-
 .projects {
   .lead {
     font-size: 1.2em;
@@ -15,6 +13,7 @@
     .project {
       display: flex;
       flex-direction: column;
+      position: relative;
 
       border-radius: 3px;
       padding: 16px;
@@ -26,14 +25,14 @@
         box-shadow: #aaa 2px 2px 11px;
       }
 
-      .spacer { 
+      .spacer {
         flex: 1;
       }
 
       .title {
         margin: 0 0 0.6em 0;
         font-size: 1.3em;
-        font-weight: bold;
+        font-weight: $bold-font-weight;
         line-height: 1;
       }
 
@@ -66,7 +65,9 @@
 
         a {
           margin-right: 0.5em;
-          display: inline-block;
+          white-space: nowrap;
+          position: relative;
+          z-index: 2;
         }
       }
     }
@@ -95,3 +96,15 @@
     }
   }
 }
+.link-spanner{
+  position:absolute; 
+  width:100%;
+  height:100%;
+  top:0;
+  left: 0;
+  z-index: 1;
+
+  /* edit: fixes overlap error in IE7/8, 
+     make sure you have an empty gif 
+  background-image: url('empty.gif');*/
+} 
