--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,7 @@
     <a href="{{ '/publications/' | relative_url }}" {% if current[1] == 'publications' %}class="active"{% endif %}>Research</a>
     <a href="{{ '/teaching/' | relative_url }}" {% if current[1] == 'teaching' %}class="active"{% endif %}>Teaching</a>
     <a href="{{ '/talks/' | relative_url }}" {% if current[1] == 'talks' %}aria-current="page"{% endif %}>Talks</a>
+    <a href="{{ '/blog/' | relative_url }}" {% if current[1] == 'blog' %}aria-current="page"{% endif %}>Blog</a>
     <a href="{{ '/cv/' | relative_url }}" {% if current[1] == 'cv' %}aria-current="page"{% endif %}>CV</a>
 
     <span class="external">
