changing color scheme

--- a/styles.scss
+++ b/styles.scss
@@ -18,8 +18,8 @@ $text-color:        #333;
 $background-color:  #fff;
 $brand-color:       #b00;
 $link-color:        #3477ad;
-$header-background: #ececec;
-$footer-background: #234;
+$header-background: #cfb991;
+$footer-background: #000000;
 $footer-text:       darken(#fff, 10%);
 
 $grey-color:       #828282;
