brand color change

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
 
     <span class="external">
       <a href="https://github.com/johnsamuelsterling"><i class="fab fa-github" aria-hidden="true"></i> GitHub</a>
-      <a href="mailto:jss0122@auburn.edu"><i class="fa-solid fa-envelope" aria-hidden="true"></i> Email</a>
+      <a href="mailto:sterli13@purdue.edu"><i class="fa-solid fa-envelope" aria-hidden="true"></i> Email</a>
     </span>
   </nav>
 </header>
