--- a/styles.scss
+++ b/styles.scss
@@ -16,7 +16,7 @@ $content-width:    850px;
 
 $text-color:        #333;
 $background-color:  #fff;
-$brand-color:       #cfb991;
+$brand-color:       #b00;
 $link-color:        #3477ad;
 $header-background: #cfb991;
 $footer-background: #000000;
