--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container">
     <div class="footer-col">
-      Hello from Auburn.<br/>
+      Hello from Purdue.<br/>
       <abbr title="Last build on {{site.time | date: '%Y-%m-%d'}}">{{ site.time | date: '%B %Y'}}</abbr>
     </div>
     <div class="footer-col">
