--- a/_sass/_dark.scss
+++ b/_sass/_dark.scss
@@ -38,7 +38,7 @@
     }
 
     .page-header {
-      border-top-color: $header-background;
+      border-top-color: $brand-color;
     }
 
     .pubs .publication .award-icon.fa-award, .pubs .publication .awards, .home .featured-publications .publication .fa-award {
