--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -1,5 +1,5 @@
 .page-header {
-  border-top: 6px solid $brand-color;
+  border-top: 6px solid $header-background;
   padding-top: 6px;
   margin-bottom: 40px;
 }
