--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,8 +4,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="application-name" content="{{ site.title }}">
   <meta name="theme-color" content="#b00">
-  <link rel="shortcut icon" href="{{ '/AuburnLogo.ico' | relative_url }}"/>
-  <link rel="icon" type="image/png" href="{{ '/AuburnLogo.png' | relative_url }}" sizes="250x250" />
+  <link rel="shortcut icon" href="{{ '/Purdue_Logo.ico' | relative_url }}"/>
+  <link rel="icon" type="image/png" href="{{ '/Purdue_Logo.png' | relative_url }}" sizes="250x250" />
 
   {% seo %}
 
