info box added to teachign tab

--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -108,3 +108,12 @@
      make sure you have an empty gif 
   background-image: url('empty.gif');*/
 } 
+
+.info-box {
+  border-left: 4px solid #007acc;
+  background-color: #eef6fc;
+  padding: 1em;
+  margin: 1em 0;
+  border-radius: 4px;
+  font-size: 0.95em;
+}
