--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -113,7 +113,7 @@
   border-left: 4px solid #007acc;
   background-color: #eef6fc;
   padding: 1em;
-  margin: 1em 0;
+  margin: 2em 0 1em 0;
   border-radius: 4px;
   font-size: 0.95em;
 }
