--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -110,10 +110,12 @@
 } 
 
 .info-box {
+  display: block;
   border-left: 4px solid #007acc;
   background-color: #eef6fc;
   padding: 1em;
-  margin: 2em 0 1em 0;
+  margin-top: 2em !important;
+  margin-bottom: 1em;
   border-radius: 4px;
   font-size: 0.95em;
 }
