--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -111,7 +111,7 @@
 
 .info-box {
   display: block;
-  border-left: 4px solid #007acc;
+  border-left: 4px solid #8e6f3e;
   background-color: #eef6fc;
   padding: 1em;
   margin-top: 2em !important;
